# un-agenda-items

./: .gitignore  README.md  clean.sh  package-lock.json  package.json  pyproject.toml  setup.sh
.github/: copilot-instructions.md
data/downloads/: session_01.json  session_10.json  session_30.json  session_35.json  session_36.json  session_37.json  session_38.json  session_39.json  session_40.json  session_41.json  session_42.json  session_43.json  session_44.json  session_45.json  session_46.json  session_47.json  session_48.json  session_49.json  session_50.json  session_51.json  session_52.json  session_53.json  session_54.json  session_55.json  session_56.json  session_57.json  session_58.json  session_59.json  session_60.json  session_61.json  session_62.json  session_63.json  session_64.json  session_65.json  session_66.json  session_67.json  session_68.json  session_69.json  session_70.json  session_71.json  (+9 more)
data/output/: agenda_items.json
scripts/: fetch-agenda-items.mjs
