[project]
name = "un-agenda-items"
version = "0.1.0"
description = "Analyze UN Agenda Items"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "isort>=6.1.0",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
]
